Capture new notes

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "good_data_reads.md",
+            "file": "git commands.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "good_data_reads.md",
+                "file": "git commands.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,11 +89,13 @@
   },
   "active": "6049aeb3a8cf6df1",
   "lastOpenFiles": [
+    "git commands.md",
+    "Untitled.md",
+    "creating_scalable_staging_script.md",
+    "docker_tips.md",
+    "salesforce_staging_generator.md",
     "good_data_reads.md",
     "looker_working_with_html.md",
-    "markdown_notes.md",
-    "creating_scalable_staging_script.md",
-    "salesforce_staging_generator.md",
-    "docker_tips.md"
+    "markdown_notes.md"
   ]
 }
