pushing up new notes

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,6 @@
   "legacyEditor": false,
   "livePreview": true,
   "showLineNumber": false,
-  "tabSize": 4
+  "tabSize": 4,
+  "promptDelete": false
 }
